--- a/HiddenFBpictures/app/src/main/res/values/strings.xml
+++ b/HiddenFBpictures/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="fb_login_protocol_scheme">fb1844169422560571</string>
     <string name="name_of_item_in_page_albums">6</string>
     <string name="name_of_item_in_page_pictures">12</string>
+    <string name="sorry_pictures_0">Sorry this album not containt any pictures</string>
 
 </resources>
