--- a/HiddenFBpictures/app/src/main/res/values/strings.xml
+++ b/HiddenFBpictures/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="name_of_item_in_page_albums">6</string>
     <string name="name_of_item_in_page_pictures">12</string>
     <string name="sorry_pictures_0">Sorry this album not containt any pictures</string>
+    <string name="upload_finish">album Upload with Success</string>
+    <string name="upload_prob">you have a problem ,upload not finished</string>
 
 </resources>
