--- a/HiddenFBpictures/app/src/main/res/values/strings.xml
+++ b/HiddenFBpictures/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="sorry_pictures_0">Sorry this album not containt any pictures</string>
     <string name="upload_finish">album Upload with Success</string>
     <string name="upload_prob">you have a problem ,upload not finished</string>
+    <string name="connection_prob">The connection failed</string>
 
 </resources>
